--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,7 @@
 [defaults]
 inventory = inventory
-private_key_file = ~/.ssh/ansible  
+private_key_file = ~/.ssh/ansible
+
+[privilege escalation]
+become_method = sudo
+become_ask_pass = False  
