--- a/windows-update.yml
+++ b/windows-update.yml
@@ -1,9 +1,9 @@
 ---
 - hosts: 192.168.1.44
-- name: Install Windows Updates
-   win_updates:
+- name: Install all security, critical, and rollup updates
+  ansible.windows.win_updates:
     category_names:
-    - SecurityUpdates
-    - CriticalUpdates
-    - UpdateRollups
+      - SecurityUpdates
+      - CriticalUpdates
+      - UpdateRollups
     reboot: yes
