--- a/windows-update.yml
+++ b/windows-update.yml
@@ -1,9 +1,10 @@
 ---
 - hosts: 192.168.1.44
-- name: Install all security, critical, and rollup updates
-  ansible.windows.win_updates:
-    category_names:
-      - SecurityUpdates
-      - CriticalUpdates
-      - UpdateRollups
-    reboot: yes
+  tasks:
+     - name: Install all security, critical, and rollup updates
+       win_updates:
+         category_names:
+           - SecurityUpdates
+           - CriticalUpdates
+           - UpdateRollups
+         reboot: yes
