Update add windows users.yml

--- a/add windows users.yml
+++ b/add windows users.yml
@@ -6,9 +6,9 @@
   username: "ansible"
   password: "ansible"
   tasks:
-    - name: Add user {{ username}}
+    - name: "Add user {{ username }}"
       win_user:
-       name: {{ username }}
-       password: {{ password            }}
+       name: "{{ username }}"
+       password: "{{ password }}"
        state: present
   
