--- a/add_windows_users.yml
+++ b/add_windows_users.yml
@@ -3,7 +3,7 @@
   gather_facts: yes
   vars:
     username: "ansible"
-    password: "changeme123"
+    password: "changeme@123"
   tasks:
     - name: "Add user {{ username }}"
       win_user:
