first upload yml file

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,5 +3,8 @@ inventory = inventory
 private_key_file = ~/.ssh/ansible
 
 [privilege escalation]
+become = false
+ask_pass = false
 become_method = sudo
-become_ask_pass = False  
+become_ask_pass = False 
+  
